# mRNABench

./: .gitignore  .readthedocs.yaml  README.md  conda_env.txt  conda_env.yml  precommit.sh  pyproject.toml  requirements.txt  setup.py
experiments/: mrl_compositionality.ipynb
mrna_bench/: __init__.py  config.yaml  utils.py
mrna_bench/data_splitter/: chromosome_split.py  data_splitter.py  homology_split.py  sklearn_split.py  split_catalog.py  ss_split.py
mrna_bench/datasets/: __init__.py  benchmark_dataset.py  dataset_catalog.py  dataset_utils.py  eclip_binding.py  go_bio_proc.py  go_cell_comp.py  go_mol_func.py  lncrna_essentiality.py  mrl_sample.py  mrl_sugimoto.py  pcg_essentiality.py  prot_loc.py  prot_loc_van_nostrand.py  rna_hl_human.py  rna_hl_mouse.py  rna_loc.py  rna_loc_fazal.py  rna_loc_ietswaart.py  vep_traitgym.py
mrna_bench/embedder/: __init__.py  dataset_embedder.py  embedder_utils.py
mrna_bench/linear_probe/: linear_probe.py  linear_probe_builder.py  persister.py
mrna_bench/loader/: loader.py
mrna_bench/models/: aido.py  cerebrus_src.py  codonbert.py  dnabert.py  dnabert_s.py  embedding_model.py  ernierna.py  evo1.py  evo2.py  helix_mrna.py  hyenadna.py  model_catalog.py  naive_baseline.py  naive_mamba.py  nucleotide_transformer.py  orthrus.py  orthrus_src.py  rinalmo.py  rnabert.py  rnaernie.py  rnafm.py  rnamsm.py  splicebert.py  utrbert.py  utrlm.py
mrna_bench/tasks/: benchmark_dataset.py  dataset_catalog.py  dataset_utils.py  go_mol_func.py  lncrna_essentiality.py  pcg_essentiality.py
scripts/: embed_dataset.py  embed_slurm.sh  launch_embedding.sh  launch_embedding_all_dataset.sh  launch_embedding_hyena.sh  launch_embedding_nt.sh  launch_linear_probe.sh  linear_probe.py  linear_probe_by_dataset.py  linear_probe_by_model.py  linear_probe_by_name.py  linear_probe_dataset.py  test_dependencies.py
scripts/embedding/: embed_dataset.py
scripts/linear_probe/: by_embname.py  by_modelname.py  linear_probe_all.py  summarize_metrics.py
tests/data/: test_dataset_utils.py
tests/linear_probe/: test_evaluator.py  test_linear_probe.py  test_linear_probe_builder.py
tests/models/: test_aido.py  test_dnabert.py  test_dnabert2.py  test_ernierna.py  test_helix_mrna.py  test_hyenadna.py  test_nt.py  test_orthrus.py  test_rinalmo.py  test_rnabert.py  test_rnaernie.py  test_rnafm.py  test_rnamsm.py  test_splicebert.py  test_utrbert.py  test_utrlm.py
visualization/: visualize_lp_results.py
(+17 files in other folders)
