[project]
name = "mrna-bench"
version = "1.2.0"
description = "Benchmarking suite for mRNA property prediction."
readme = "README.md"
authors = [
    { name = "Ruian (Ian) Shi", email = "ian.shi@mail.utoronto.ca" },
    { name = "Taykhoom Dalal" },
    { name = "Phil Fradkin" },
    { name = "Divya Koyyalagunta" }
]
requires-python = ">= 3.10"
license = { file = "LICENSE" }  # Include a LICENSE file in your repo
keywords = ["mrna", "genomic foundation model", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]
dependencies = [
    "tqdm",
    "PyYAML",
    "scikit-learn",
    "numpy<2",
    "pandas<=2.2.2",
    "requests",
    "pyarrow",
    "fastparquet"
    "openpxyl"
]

[project.urls]
Repository = "https://github.com/morrislab/mRNABench"

[project.optional-dependencies]
base_models = [
    "torch==2.2.2",
    "transformers",
    "mamba-ssm==1.2.0.post1",
    "rna-fm==0.2.2",
    "accelerate",
    "multimolecule",
    "modelgenerator==0.1.1-4",
    "evo-model"
]
dev = [
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest"
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mrna_bench*"]
